bubba-backend (2.5.0.3) vincent hugo; urgency=low

  * Fatal error filename parameter

 -- Carl Fürstenberg <carl@excito.com>  Thu, 07 Jun 2012 16:47:36 +0200

bubba-backend (2.5.0.2) vincent hugo; urgency=low

  * Use Config::Simple to read jobdata (Closes: #135)

 -- Carl Fürstenberg <carl@excito.com>  Thu, 07 Jun 2012 15:44:50 +0200

bubba-backend (2.5.0.1) vincent hugo; urgency=low

  * Fixing missing creation of TimeMachine directory (Closes: 128)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 05 Jun 2012 14:35:24 +0200

bubba-backend (2.5~pre5) vincent hugo; urgency=low

  * Removing save of firewall (Closes: #119)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 29 May 2012 16:07:24 +0200

bubba-backend (2.5~pre4) vincent hugo; urgency=low

  * Publish AirPrint at upgrade (Closes: #118)

 -- Carl Fürstenberg <carl@excito.com>  Mon, 28 May 2012 16:03:10 +0200

bubba-backend (2.5~pre3) vincent hugo; urgency=low

  * Add AirPrint Support (Closes: #80)

 -- Carl Fürstenberg <carl@excito.com>  Mon, 28 May 2012 15:32:49 +0200

bubba-backend (2.5~pre2) vincent hugo; urgency=low

  * update AppleVolumes.default (Closes: #117)

 -- Carl Fürstenberg <carl@excito.com>  Mon, 28 May 2012 14:29:09 +0200

bubba-backend (2.5~pre1) vincent hugo; urgency=low

  * utilize incron to reload samba in printcap change (Closes: #87)

 -- Carl Fürstenberg <carl@excito.com>  Wed, 16 May 2012 18:04:18 +0200

bubba-backend (2.4.2.2) vincent hugo; urgency=low

  * BIII-41: Update mdadm.conf when restoring RAID on new internal disk

 -- Carl Fürstenberg <carl@excito.com>  Fri, 27 Apr 2012 14:42:14 +0200

bubba-backend (2.4.2.1) vincent hugo; urgency=low

  * After converting to gpt, make sure we zap the disk

 -- Carl Fürstenberg <carl@excito.com>  Thu, 26 Apr 2012 15:49:30 +0200

bubba-backend (2.4.2) vincent hugo; urgency=low

  * Helper script to physically identify the box
  * add dependency for compat-wireless

 -- Carl Fürstenberg <carl@excito.com>  Thu, 12 Apr 2012 14:36:11 +0200
