@@ -366,10 +366,10 @@ sub get_destinations {
 	my $jobfile = "/home/" . $user ."/" . ARCHIVEINFO_DIR . $jobname . "/" . JOBFILE;
 	my $error = "";
 
-	my %Config;
+	my $cfg = Config::Simple->new($jobfile);
+	my $Config = $cfg->param(-block => 'default');
+	%targetdata = map { $_ => quotemeta($Config->{$_}) } keys %$Config;
 
-	Config::Simple->import_from($jobfile, \%Config);
-	%targetdata = map { $_ => quotemeta($Config{$_}) } keys %Config;
 	if( !$targetdata{'target_path'} ) {
 		#do not allow empty target, set to "."
 		$targetdata{'target_path'} = ".";
