@@ -1,3 +1,9 @@
+bubba-backend (2.5.0.4) vincent hugo; urgency=low
+
+  * Config::Simple exported default.key for section-less ini files
+
+ -- Carl Fürstenberg <carl@excito.com>  Thu, 07 Jun 2012 17:03:21 +0200
+
 bubba-backend (2.5.0.3) vincent hugo; urgency=low
 
   * Fatal error filename parameter
